# aspect-extraction

./: .dockerignore  .flake8  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  RUST_INTEGRATION.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: build-wheels.yml  ci.yml
aspect_extraction/: __init__.py
aspect_extraction/api/: __init__.py  main.py
aspect_extraction/cli/: __init__.py  main.py
aspect_extraction/core/: __init__.py  aspect.py  extractor.py  factory.py
aspect_extraction/evaluation/: __init__.py  metrics.py
aspect_extraction/extractors/: __init__.py  rule_based.py  statistical.py  transformer_based.py
aspect_extraction/models/: __init__.py  request.py  response.py
aspect_extraction/utils/: __init__.py  text_processing.py
data/datasets/: product_reviews.txt  restaurant_reviews.txt
examples/: basic_usage.py  benchmark_backends.py  rust_acceleration.py
rust/: .gitignore  Cargo.toml  README.md
rust/aspect-extraction-core/: Cargo.toml  pyproject.toml
rust/aspect-extraction-core/benches/: extraction_benchmark.rs
rust/aspect-extraction-core/src/: error.rs  extractor.rs  lib.rs  python.rs  types.rs  utils.rs
rust/aspect-extraction-core/src/extractors/: mod.rs  rule_based.rs  statistical.rs
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_api.py  test_rust_backend.py
tests/unit/: __init__.py  test_aspect.py  test_extractors.py  test_metrics.py  test_utils.py
