[metadata]
name = aspect-extraction
version = attr: aspect_extraction.__version__
description = Production-ready multi-model aspect extraction system for NLP
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/duyetdev/aspect-extraction
author = aspect-extraction contributors
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Text Processing :: Linguistic
    Typing :: Typed

[options]
packages = find:
python_requires = >=3.9
include_package_data = True

[options.packages.find]
where = .
include = aspect_extraction*
exclude = tests*

[options.entry_points]
console_scripts =
    aspect-extract = aspect_extraction.cli.main:cli
    aspect-api = aspect_extraction.api.main:run_server
