[package]
name = "aspect-extraction-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "aspect_extraction_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Text processing
regex.workspace = true
unicode-segmentation.workspace = true

# Python bindings
pyo3 = { workspace = true, optional = true }

# Performance
rayon.workspace = true
hashbrown.workspace = true

[dev-dependencies]
criterion.workspace = true

[features]
default = []
python = ["pyo3"]

[[bench]]
name = "extraction_benchmark"
harness = false
